--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "homepage": "https://github.com/MiguelCastillo/git-npm-updater#readme",
   "dependencies": {
     "github-api": "^2.3.0",
-    "json-format": "^0.1.2"
+    "json-format": "^0.1.2",
+    "subarg": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^3.2.0"
